scripts/include/notcurses.h

struct notcurses; 
struct ncplane;   
struct ncprogbar; 
struct ncselector;
struct ncmultiselector; 
struct nctab;     
struct nctabbed;  
typedef enum {
  NCTYPE_UNKNOWN,
  NCTYPE_PRESS,
  NCTYPE_REPEAT,
  NCTYPE_RELEASE,
} ncintype_e;
typedef struct ncinput {
  uint32_t id;       
  int y, x;          
  char utf8[5];      
  bool alt;          
  bool shift;        
  bool ctrl;         
  ncintype_e evtype;
  unsigned modifiers;
  int ypx, xpx;      
} ncinput;
static inline const char*
ncbprefix(uintmax_t val, uintmax_t decimal, char* buf, int omitdec){
  return ncnmetric(val, NCBPREFIXSTRLEN + 1, decimal, buf, omitdec, 1024, 'i');
}
API int notcurses_default_foreground(const struct notcurses* nc, uint32_t* fg)
  __attribute__ ((nonnull (1)));
API int notcurses_default_background(const struct notcurses* nc, uint32_t* bg)
  __attribute__ ((nonnull (1)));
API int notcurses_cursor_enable(struct notcurses* nc, int y, int x)
  __attribute__ ((nonnull (1)));
API int notcurses_cursor_disable(struct notcurses* nc)
  __attribute__ ((nonnull (1)));
API int notcurses_cursor_yx(const struct notcurses* nc, int* y, int* x)
  __attribute__ ((nonnull (1)));
API void ncplane_greyscale(struct ncplane* n)
  __attribute__ ((nonnull (1)));
struct ncselector_item {
  const char* option;
  const char* desc;
};
typedef struct ncselector_options {
  const char* title; 
  const char* secondary; 
  const char* footer; 
  const struct ncselector_item* items; 
  unsigned defidx;
  unsigned maxdisplay;
  uint64_t opchannels;   
  uint64_t descchannels; 
  uint64_t titlechannels;
  uint64_t footchannels; 
  uint64_t boxchannels;  
  uint64_t flags;        
} ncselector_options;
API ALLOC struct ncselector* ncselector_create(struct ncplane* n, const ncselector_options* opts)
  __attribute__ ((nonnull (1)));
API int ncselector_additem(struct ncselector* n, const struct ncselector_item* item);
API int ncselector_delitem(struct ncselector* n, const char* item);
API const char* ncselector_selected(const struct ncselector* n)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncselector_plane(struct ncselector* n)
  __attribute__ ((nonnull (1)));
API const char* ncselector_previtem(struct ncselector* n)
  __attribute__ ((nonnull (1)));
API const char* ncselector_nextitem(struct ncselector* n)
  __attribute__ ((nonnull (1)));
API bool ncselector_offer_input(struct ncselector* n, const ncinput* nc)
  __attribute__ ((nonnull (1, 2)));
API void ncselector_destroy(struct ncselector* n, char** item);
struct ncmselector_item {
  const char* option;
  const char* desc;
  bool selected;
};
typedef struct ncmultiselector_options {
  const char* title; 
  const char* secondary; 
  const char* footer; 
  const struct ncmselector_item* items; 
  unsigned maxdisplay;
  uint64_t opchannels;   
  uint64_t descchannels; 
  uint64_t titlechannels;
  uint64_t footchannels; 
  uint64_t boxchannels;  
  uint64_t flags;        
} ncmultiselector_options;
API ALLOC struct ncmultiselector* ncmultiselector_create(struct ncplane* n, const ncmultiselector_options* opts)
  __attribute__ ((nonnull (1)));
API int ncmultiselector_selected(struct ncmultiselector* n, bool* selected, unsigned count);
API struct ncplane* ncmultiselector_plane(struct ncmultiselector* n);
API bool ncmultiselector_offer_input(struct ncmultiselector* n, const ncinput* nc)
  __attribute__ ((nonnull (1, 2)));
API void ncmultiselector_destroy(struct ncmultiselector* n);
struct nctree_item {
  void* curry;
  struct nctree_item* subs;
  unsigned subcount;
};
typedef struct nctree_options {
  const struct nctree_item* items; 
  unsigned count;           
  int (*nctreecb)(struct ncplane*, void*, int); 
  int indentcols;           
  uint64_t flags;           
} nctree_options;
API ALLOC struct nctree* nctree_create(struct ncplane* n, const nctree_options* opts)
  __attribute__ ((nonnull (1, 2)));
API struct ncplane* nctree_plane(struct nctree* n)
  __attribute__ ((nonnull (1)));
API int nctree_redraw(struct nctree* n)
  __attribute__ ((nonnull (1)));
API bool nctree_offer_input(struct nctree* n, const ncinput* ni)
  __attribute__ ((nonnull (1, 2)));
API void* nctree_focused(struct nctree* n) __attribute__ ((nonnull (1)));
API void* nctree_next(struct nctree* n) __attribute__ ((nonnull (1)));
API void* nctree_prev(struct nctree* n) __attribute__ ((nonnull (1)));
API void* nctree_goto(struct nctree* n, const unsigned* spec, int* failspec);
API int nctree_add(struct nctree* n, const unsigned* spec, const struct nctree_item* add)
  __attribute__ ((nonnull (1, 2, 3)));
API int nctree_del(struct nctree* n, const unsigned* spec)
  __attribute__ ((nonnull (1, 2)));
API void nctree_destroy(struct nctree* n);
struct ncmenu_item {
  const char* desc;     
  ncinput shortcut;     
};
struct ncmenu_section {
  const char* name;       
  int itemcount;
  struct ncmenu_item* items;
  ncinput shortcut;       
};
typedef struct ncmenu_options {
  struct ncmenu_section* sections; 
  int sectioncount;                
  uint64_t headerchannels;         
  uint64_t sectionchannels;        
  uint64_t flags;                  
} ncmenu_options;
API ALLOC struct ncmenu* ncmenu_create(struct ncplane* n, const ncmenu_options* opts)
  __attribute__ ((nonnull (1)));
API int ncmenu_unroll(struct ncmenu* n, int sectionidx);
API int ncmenu_rollup(struct ncmenu* n) __attribute__ ((nonnull (1)));
API int ncmenu_nextsection(struct ncmenu* n) __attribute__ ((nonnull (1)));
API int ncmenu_prevsection(struct ncmenu* n) __attribute__ ((nonnull (1)));
API int ncmenu_nextitem(struct ncmenu* n) __attribute__ ((nonnull (1)));
API int ncmenu_previtem(struct ncmenu* n) __attribute__ ((nonnull (1)));
API int ncmenu_item_set_status(struct ncmenu* n, const char* section,
                               const char* item, bool enabled);
API const char* ncmenu_selected(const struct ncmenu* n, ncinput* ni);
API const char* ncmenu_mouse_selected(const struct ncmenu* n,
                                      const ncinput* click, ncinput* ni);
API struct ncplane* ncmenu_plane(struct ncmenu* n);
API bool ncmenu_offer_input(struct ncmenu* n, const ncinput* nc)
  __attribute__ ((nonnull (1, 2)));
API void ncmenu_destroy(struct ncmenu* n);
typedef struct ncprogbar_options {
  uint32_t ulchannel; 
  uint32_t urchannel; 
  uint32_t blchannel; 
  uint32_t brchannel; 
  uint64_t flags;
} ncprogbar_options;
API ALLOC struct ncprogbar* ncprogbar_create(struct ncplane* n, const ncprogbar_options* opts)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncprogbar_plane(struct ncprogbar* n)
  __attribute__ ((nonnull (1)));
API int ncprogbar_set_progress(struct ncprogbar* n, double p)
  __attribute__ ((nonnull (1)));
API double ncprogbar_progress(const struct ncprogbar* n)
  __attribute__ ((nonnull (1)));
API void ncprogbar_destroy(struct ncprogbar* n);
typedef struct nctabbed_options {
  uint64_t selchan; 
  uint64_t hdrchan; 
  uint64_t sepchan; 
  const char* separator;  
  uint64_t flags;   
} nctabbed_options;
typedef void (*tabcb)(struct nctab* t, struct ncplane* ncp, void* curry);
API ALLOC struct nctabbed* nctabbed_create(struct ncplane* n, const nctabbed_options* opts)
  __attribute ((nonnull (1)));
API void nctabbed_destroy(struct nctabbed* nt);
API void nctabbed_redraw(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API void nctabbed_ensure_selected_header_visible(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API struct nctab* nctabbed_selected(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API struct nctab* nctabbed_leftmost(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API int nctabbed_tabcount(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API struct ncplane* nctabbed_plane(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API struct ncplane* nctabbed_content_plane(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API tabcb nctab_cb(struct nctab* t)
  __attribute__ ((nonnull (1)));
API const char* nctab_name(struct nctab* t)
  __attribute__ ((nonnull (1)));
API int nctab_name_width(struct nctab* t)
  __attribute__ ((nonnull (1)));
API void* nctab_userptr(struct nctab* t)
  __attribute__ ((nonnull (1)));
API struct nctab* nctab_next(struct nctab* t)
  __attribute__ ((nonnull (1)));
API struct nctab* nctab_prev(struct nctab* t)
  __attribute__ ((nonnull (1)));
API ALLOC struct nctab* nctabbed_add(struct nctabbed* nt, struct nctab* after,
                                     struct nctab* before, tabcb tcb,
                                     const char* name, void* opaque)
  __attribute__ ((nonnull (1, 5)));
API int nctabbed_del(struct nctabbed* nt, struct nctab* t)
  __attribute__ ((nonnull (1)));
API int nctab_move(struct nctabbed* nt, struct nctab* t, struct nctab* after,
                   struct nctab* before)
  __attribute__ ((nonnull (1, 2)));
API void nctab_move_right(struct nctabbed* nt, struct nctab* t)
  __attribute__ ((nonnull (1, 2)));
API void nctab_move_left(struct nctabbed* nt, struct nctab* t)
  __attribute__ ((nonnull (1, 2)));
API void nctabbed_rotate(struct nctabbed* nt, int amt)
  __attribute__ ((nonnull (1)));
API struct nctab* nctabbed_next(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API struct nctab* nctabbed_prev(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API struct nctab* nctabbed_select(struct nctabbed* nt, struct nctab* t)
  __attribute__ ((nonnull (1, 2)));
API void nctabbed_channels(struct nctabbed* nt, uint64_t* RESTRICT hdrchan,
                           uint64_t* RESTRICT selchan, uint64_t* RESTRICT sepchan)
  __attribute__ ((nonnull (1)));
static inline uint64_t
nctabbed_hdrchan(struct nctabbed* nt){
  uint64_t ch;
  nctabbed_channels(nt, &ch, NULL, NULL);
  return ch;
}
static inline uint64_t
nctabbed_selchan(struct nctabbed* nt){
  uint64_t ch;
  nctabbed_channels(nt, NULL, &ch, NULL);
  return ch;
}
static inline uint64_t
nctabbed_sepchan(struct nctabbed* nt){
  uint64_t ch;
  nctabbed_channels(nt, NULL, NULL, &ch);
  return ch;
}
API const char* nctabbed_separator(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API int nctabbed_separator_width(struct nctabbed* nt)
  __attribute__ ((nonnull (1)));
API void nctabbed_set_hdrchan(struct nctabbed* nt, uint64_t chan)
  __attribute__ ((nonnull (1)));
API void nctabbed_set_selchan(struct nctabbed* nt, uint64_t chan)
  __attribute__ ((nonnull (1)));