src/LibNotcurses.jl


function ncbprefix(val, decimal, buf, omitdec)
    ccall((:ncbprefix, notcurses), Ptr{Cchar}, (uintmax_t, uintmax_t, Ptr{Cchar}, Cint), val, decimal, buf, omitdec)
end

function notcurses_default_foreground(nc, fg)
    ccall((:notcurses_default_foreground, notcurses), Cint, (Ptr{notcurses}, Ptr{UInt32}), nc, fg)
end

function notcurses_default_background(nc, bg)
    ccall((:notcurses_default_background, notcurses), Cint, (Ptr{notcurses}, Ptr{UInt32}), nc, bg)
end

function notcurses_cursor_enable(nc, y, x)
    ccall((:notcurses_cursor_enable, notcurses), Cint, (Ptr{notcurses}, Cint, Cint), nc, y, x)
end

function notcurses_cursor_disable(nc)
    ccall((:notcurses_cursor_disable, notcurses), Cint, (Ptr{notcurses},), nc)
end

function notcurses_cursor_yx(nc, y, x)
    ccall((:notcurses_cursor_yx, notcurses), Cint, (Ptr{notcurses}, Ptr{Cint}, Ptr{Cint}), nc, y, x)
end

function ncplane_greyscale(n)
    ccall((:ncplane_greyscale, notcurses), Cvoid, (Ptr{ncplane},), n)
end

struct ncselector_item
    option::Ptr{Cchar}
    desc::Ptr{Cchar}
end

struct ncselector_options
    title::Ptr{Cchar}
    secondary::Ptr{Cchar}
    footer::Ptr{Cchar}
    items::Ptr{ncselector_item}
    defidx::Cuint
    maxdisplay::Cuint
    opchannels::UInt64
    descchannels::UInt64
    titlechannels::UInt64
    footchannels::UInt64
    boxchannels::UInt64
    flags::UInt64
end

function ncselector_create(n, opts)
    ccall((:ncselector_create, notcurses), Ptr{ncselector}, (Ptr{ncplane}, Ptr{ncselector_options}), n, opts)
end

function ncselector_additem(n, item)
    ccall((:ncselector_additem, notcurses), Cint, (Ptr{ncselector}, Ptr{ncselector_item}), n, item)
end

function ncselector_delitem(n, item)
    ccall((:ncselector_delitem, notcurses), Cint, (Ptr{ncselector}, Ptr{Cchar}), n, item)
end

function ncselector_selected(n)
    ccall((:ncselector_selected, notcurses), Ptr{Cchar}, (Ptr{ncselector},), n)
end

function ncselector_plane(n)
    ccall((:ncselector_plane, notcurses), Ptr{ncplane}, (Ptr{ncselector},), n)
end

function ncselector_previtem(n)
    ccall((:ncselector_previtem, notcurses), Ptr{Cchar}, (Ptr{ncselector},), n)
end

function ncselector_nextitem(n)
    ccall((:ncselector_nextitem, notcurses), Ptr{Cchar}, (Ptr{ncselector},), n)
end

function ncselector_offer_input(n, nc)
    ccall((:ncselector_offer_input, notcurses), Bool, (Ptr{ncselector}, Ptr{ncinput}), n, nc)
end

function ncselector_destroy(n, item)
    ccall((:ncselector_destroy, notcurses), Cvoid, (Ptr{ncselector}, Ptr{Ptr{Cchar}}), n, item)
end

struct ncmselector_item
    option::Ptr{Cchar}
    desc::Ptr{Cchar}
    selected::Bool
end

struct ncmultiselector_options
    title::Ptr{Cchar}
    secondary::Ptr{Cchar}
    footer::Ptr{Cchar}
    items::Ptr{ncmselector_item}
    maxdisplay::Cuint
    opchannels::UInt64
    descchannels::UInt64
    titlechannels::UInt64
    footchannels::UInt64
    boxchannels::UInt64
    flags::UInt64
end

function ncmultiselector_create(n, opts)
    ccall((:ncmultiselector_create, notcurses), Ptr{ncmultiselector}, (Ptr{ncplane}, Ptr{ncmultiselector_options}), n, opts)
end

function ncmultiselector_selected(n, selected, count)
    ccall((:ncmultiselector_selected, notcurses), Cint, (Ptr{ncmultiselector}, Ptr{Bool}, Cuint), n, selected, count)
end

function ncmultiselector_plane(n)
    ccall((:ncmultiselector_plane, notcurses), Ptr{ncplane}, (Ptr{ncmultiselector},), n)
end

function ncmultiselector_offer_input(n, nc)
    ccall((:ncmultiselector_offer_input, notcurses), Bool, (Ptr{ncmultiselector}, Ptr{ncinput}), n, nc)
end

function ncmultiselector_destroy(n)
    ccall((:ncmultiselector_destroy, notcurses), Cvoid, (Ptr{ncmultiselector},), n)
end

struct nctree_item
    curry::Ptr{Cvoid}
    subs::Ptr{nctree_item}
    subcount::Cuint
end

struct nctree_options
    items::Ptr{nctree_item}
    count::Cuint
    nctreecb::Ptr{Cvoid}
    indentcols::Cint
    flags::UInt64
end

mutable struct nctree end

function nctree_create(n, opts)
    ccall((:nctree_create, notcurses), Ptr{nctree}, (Ptr{ncplane}, Ptr{nctree_options}), n, opts)
end

function nctree_plane(n)
    ccall((:nctree_plane, notcurses), Ptr{ncplane}, (Ptr{nctree},), n)
end

function nctree_redraw(n)
    ccall((:nctree_redraw, notcurses), Cint, (Ptr{nctree},), n)
end

function nctree_offer_input(n, ni)
    ccall((:nctree_offer_input, notcurses), Bool, (Ptr{nctree}, Ptr{ncinput}), n, ni)
end

function nctree_focused(n)
    ccall((:nctree_focused, notcurses), Ptr{Cvoid}, (Ptr{nctree},), n)
end

function nctree_next(n)
    ccall((:nctree_next, notcurses), Ptr{Cvoid}, (Ptr{nctree},), n)
end

function nctree_prev(n)
    ccall((:nctree_prev, notcurses), Ptr{Cvoid}, (Ptr{nctree},), n)
end

function nctree_goto(n, spec, failspec)
    ccall((:nctree_goto, notcurses), Ptr{Cvoid}, (Ptr{nctree}, Ptr{Cuint}, Ptr{Cint}), n, spec, failspec)
end

function nctree_add(n, spec, add)
    ccall((:nctree_add, notcurses), Cint, (Ptr{nctree}, Ptr{Cuint}, Ptr{nctree_item}), n, spec, add)
end

function nctree_del(n, spec)
    ccall((:nctree_del, notcurses), Cint, (Ptr{nctree}, Ptr{Cuint}), n, spec)
end

function nctree_destroy(n)
    ccall((:nctree_destroy, notcurses), Cvoid, (Ptr{nctree},), n)
end

struct ncmenu_item
    desc::Ptr{Cchar}
    shortcut::ncinput
end

struct ncmenu_section
    name::Ptr{Cchar}
    itemcount::Cint
    items::Ptr{ncmenu_item}
    shortcut::ncinput
end

struct ncmenu_options
    sections::Ptr{ncmenu_section}
    sectioncount::Cint
    headerchannels::UInt64
    sectionchannels::UInt64
    flags::UInt64
end

mutable struct ncmenu end

function ncmenu_create(n, opts)
    ccall((:ncmenu_create, notcurses), Ptr{ncmenu}, (Ptr{ncplane}, Ptr{ncmenu_options}), n, opts)
end

function ncmenu_unroll(n, sectionidx)
    ccall((:ncmenu_unroll, notcurses), Cint, (Ptr{ncmenu}, Cint), n, sectionidx)
end

function ncmenu_rollup(n)
    ccall((:ncmenu_rollup, notcurses), Cint, (Ptr{ncmenu},), n)
end

function ncmenu_nextsection(n)
    ccall((:ncmenu_nextsection, notcurses), Cint, (Ptr{ncmenu},), n)
end

function ncmenu_prevsection(n)
    ccall((:ncmenu_prevsection, notcurses), Cint, (Ptr{ncmenu},), n)
end

function ncmenu_nextitem(n)
    ccall((:ncmenu_nextitem, notcurses), Cint, (Ptr{ncmenu},), n)
end

function ncmenu_previtem(n)
    ccall((:ncmenu_previtem, notcurses), Cint, (Ptr{ncmenu},), n)
end

function ncmenu_item_set_status(n, section, item, enabled)
    ccall((:ncmenu_item_set_status, notcurses), Cint, (Ptr{ncmenu}, Ptr{Cchar}, Ptr{Cchar}, Bool), n, section, item, enabled)
end

function ncmenu_selected(n, ni)
    ccall((:ncmenu_selected, notcurses), Ptr{Cchar}, (Ptr{ncmenu}, Ptr{ncinput}), n, ni)
end

function ncmenu_mouse_selected(n, click, ni)
    ccall((:ncmenu_mouse_selected, notcurses), Ptr{Cchar}, (Ptr{ncmenu}, Ptr{ncinput}, Ptr{ncinput}), n, click, ni)
end

function ncmenu_plane(n)
    ccall((:ncmenu_plane, notcurses), Ptr{ncplane}, (Ptr{ncmenu},), n)
end

function ncmenu_offer_input(n, nc)
    ccall((:ncmenu_offer_input, notcurses), Bool, (Ptr{ncmenu}, Ptr{ncinput}), n, nc)
end

function ncmenu_destroy(n)
    ccall((:ncmenu_destroy, notcurses), Cvoid, (Ptr{ncmenu},), n)
end

struct ncprogbar_options
    ulchannel::UInt32
    urchannel::UInt32
    blchannel::UInt32
    brchannel::UInt32
    flags::UInt64
end

function ncprogbar_create(n, opts)
    ccall((:ncprogbar_create, notcurses), Ptr{ncprogbar}, (Ptr{ncplane}, Ptr{ncprogbar_options}), n, opts)
end

function ncprogbar_plane(n)
    ccall((:ncprogbar_plane, notcurses), Ptr{ncplane}, (Ptr{ncprogbar},), n)
end

function ncprogbar_set_progress(n, p)
    ccall((:ncprogbar_set_progress, notcurses), Cint, (Ptr{ncprogbar}, Cdouble), n, p)
end

function ncprogbar_progress(n)
    ccall((:ncprogbar_progress, notcurses), Cdouble, (Ptr{ncprogbar},), n)
end

function ncprogbar_destroy(n)
    ccall((:ncprogbar_destroy, notcurses), Cvoid, (Ptr{ncprogbar},), n)
end

struct nctabbed_options
    selchan::UInt64
    hdrchan::UInt64
    sepchan::UInt64
    separator::Ptr{Cchar}
    flags::UInt64
end

# typedef void ( * tabcb ) ( struct nctab * t , struct ncplane * ncp , void * curry )
const tabcb = Ptr{Cvoid}

function nctabbed_create(n, opts)
    ccall((:nctabbed_create, notcurses), Ptr{nctabbed}, (Ptr{ncplane}, Ptr{nctabbed_options}), n, opts)
end

function nctabbed_destroy(nt)
    ccall((:nctabbed_destroy, notcurses), Cvoid, (Ptr{nctabbed},), nt)
end

function nctabbed_redraw(nt)
    ccall((:nctabbed_redraw, notcurses), Cvoid, (Ptr{nctabbed},), nt)
end

function nctabbed_ensure_selected_header_visible(nt)
    ccall((:nctabbed_ensure_selected_header_visible, notcurses), Cvoid, (Ptr{nctabbed},), nt)
end

function nctabbed_selected(nt)
    ccall((:nctabbed_selected, notcurses), Ptr{nctab}, (Ptr{nctabbed},), nt)
end

function nctabbed_leftmost(nt)
    ccall((:nctabbed_leftmost, notcurses), Ptr{nctab}, (Ptr{nctabbed},), nt)
end

function nctabbed_tabcount(nt)
    ccall((:nctabbed_tabcount, notcurses), Cint, (Ptr{nctabbed},), nt)
end

function nctabbed_plane(nt)
    ccall((:nctabbed_plane, notcurses), Ptr{ncplane}, (Ptr{nctabbed},), nt)
end

function nctabbed_content_plane(nt)
    ccall((:nctabbed_content_plane, notcurses), Ptr{ncplane}, (Ptr{nctabbed},), nt)
end

function nctab_cb(t)
    ccall((:nctab_cb, notcurses), tabcb, (Ptr{nctab},), t)
end

function nctab_name(t)
    ccall((:nctab_name, notcurses), Ptr{Cchar}, (Ptr{nctab},), t)
end

function nctab_name_width(t)
    ccall((:nctab_name_width, notcurses), Cint, (Ptr{nctab},), t)
end

function nctab_userptr(t)
    ccall((:nctab_userptr, notcurses), Ptr{Cvoid}, (Ptr{nctab},), t)
end

function nctab_next(t)
    ccall((:nctab_next, notcurses), Ptr{nctab}, (Ptr{nctab},), t)
end

function nctab_prev(t)
    ccall((:nctab_prev, notcurses), Ptr{nctab}, (Ptr{nctab},), t)
end

function nctabbed_add(nt, after, before, tcb, name, opaque)
    ccall((:nctabbed_add, notcurses), Ptr{nctab}, (Ptr{nctabbed}, Ptr{nctab}, Ptr{nctab}, tabcb, Ptr{Cchar}, Ptr{Cvoid}), nt, after, before, tcb, name, opaque)
end

function nctabbed_del(nt, t)
    ccall((:nctabbed_del, notcurses), Cint, (Ptr{nctabbed}, Ptr{nctab}), nt, t)
end

function nctab_move(nt, t, after, before)
    ccall((:nctab_move, notcurses), Cint, (Ptr{nctabbed}, Ptr{nctab}, Ptr{nctab}, Ptr{nctab}), nt, t, after, before)
end

function nctab_move_right(nt, t)
    ccall((:nctab_move_right, notcurses), Cvoid, (Ptr{nctabbed}, Ptr{nctab}), nt, t)
end

function nctab_move_left(nt, t)
    ccall((:nctab_move_left, notcurses), Cvoid, (Ptr{nctabbed}, Ptr{nctab}), nt, t)
end

function nctabbed_rotate(nt, amt)
    ccall((:nctabbed_rotate, notcurses), Cvoid, (Ptr{nctabbed}, Cint), nt, amt)
end

function nctabbed_next(nt)
    ccall((:nctabbed_next, notcurses), Ptr{nctab}, (Ptr{nctabbed},), nt)
end

function nctabbed_prev(nt)
    ccall((:nctabbed_prev, notcurses), Ptr{nctab}, (Ptr{nctabbed},), nt)
end

function nctabbed_select(nt, t)
    ccall((:nctabbed_select, notcurses), Ptr{nctab}, (Ptr{nctabbed}, Ptr{nctab}), nt, t)
end

function nctabbed_channels(nt, hdrchan, selchan, sepchan)
    ccall((:nctabbed_channels, notcurses), Cvoid, (Ptr{nctabbed}, Ptr{UInt64}, Ptr{UInt64}, Ptr{UInt64}), nt, hdrchan, selchan, sepchan)
end

function nctabbed_hdrchan(nt)
    ccall((:nctabbed_hdrchan, notcurses), UInt64, (Ptr{nctabbed},), nt)
end

function nctabbed_selchan(nt)
    ccall((:nctabbed_selchan, notcurses), UInt64, (Ptr{nctabbed},), nt)
end

function nctabbed_sepchan(nt)
    ccall((:nctabbed_sepchan, notcurses), UInt64, (Ptr{nctabbed},), nt)
end

function nctabbed_separator(nt)
    ccall((:nctabbed_separator, notcurses), Ptr{Cchar}, (Ptr{nctabbed},), nt)
end

function nctabbed_separator_width(nt)
    ccall((:nctabbed_separator_width, notcurses), Cint, (Ptr{nctabbed},), nt)
end

function nctabbed_set_hdrchan(nt, chan)
    ccall((:nctabbed_set_hdrchan, notcurses), Cvoid, (Ptr{nctabbed}, UInt64), nt, chan)
end

function nctabbed_set_selchan(nt, chan)
    ccall((:nctabbed_set_selchan, notcurses), Cvoid, (Ptr{nctabbed}, UInt64), nt, chan)
end
